--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "immutable": "^4.0.0-rc.12",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "slate": "^0.45.0",
+    "slate-react": "^0.21.20"
   },
   "scripts": {
     "start": "react-scripts start",
