--- a/my-app/package.json
+++ b/my-app/package.json
@@ -6,6 +6,7 @@
     "immutable": "^4.0.0-rc.12",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-icons-kit": "^1.3.1",
     "react-scripts": "2.1.8",
     "slate": "^0.45.0",
     "slate-react": "^0.21.20"
